# Home-Automation

Control-Center/: build.gradle  compose.yaml  settings.gradle
Control-Center/src/main/java/dev/martintaylor/controlcenter/: ControlCenterApplication.java
Control-Center/src/main/resources/: application.yaml
Control-Center/src/test/java/dev/martintaylor/controlcenter/: ControlCenterApplicationTests.java
MV-Facial-Identification/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mosquitto.conf  pyproject.toml
MV-Facial-Identification/mv_facial_identification/: __init__.py  app.py  config.py  events.py  mqtt_client.py  recognition.py  rtsp.py
MV-Facial-Identification/tests/: test_app.py
